Avoid creating windows for placeholder screens.

Unfortuantely QPlatformScreen::isPlaceholder is not exposed so we need a
heuristic. On wayland all placeholder screens have a null geometry. We
also know that any real screen must have a geometry so we don't need to
watch that QScreen for changes.

BUG: 439096